# CryptoTLVClient

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  encrypto_parse.cpp  encrypto_parse.h  encrypto_utils.cpp  encrypto_utils.h  login_window.cpp  login_window.h  main.cpp  server.py  tcpmgr.h  test.py  tlv_parse.cpp  tlv_parse.h
